Resolved issue with cards headers and sub headers being hard to read due to color mismatch

--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,23 +1,15 @@
 .card {
-
   &:not(:last-child) {
     margin-bottom: $card-margin;
-  }
-
-  h1, h2, h3, h4, h5, h6,
-  .h1, .h2, .h3, .h4, .h5, .h6 {
-    color: $text-light;
   }
 }
 
 .card-header {
   background-color: inherit;
-  color: $text-light;
-  border-bottom: $border-width $border-color solid;
+  border-bottom-width: $border-width;
 }
 
 .card-body {
-
   > .container,
   > .container-fluid {
     width: auto;
@@ -33,14 +25,12 @@
 
 .card-group,
 .card-deck {
-
   .card {
     margin-bottom: 0;
   }
 }
 
 .card-group {
-
   .card {
     border-left-width: $border-width;
     border-right-width: $border-width;
